fix for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#git files
+.gitignore
+
 # Compiled class file
 *.class
 
@@ -8,7 +11,9 @@
 *.ctxt
 
 #Intellij files
+*.idea
 .idea
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
